# animation-system

./: .gitignore  CMakeLists.txt  README.md  build_emscripten.bat
src/: CMakeLists.txt  anim_blend.cpp  anim_blend.h  anim_bone_to_local.cpp  anim_bone_to_local.h  anim_fabrik_ik.cpp  anim_fabrik_ik.h  anim_global_transform.cpp  anim_global_transform.h  anim_local_to_global.cpp  anim_local_to_global.h  anim_local_transform.cpp  anim_local_transform.h  anim_lookat_ik.cpp  anim_lookat_ik.h  anim_offset.cpp  anim_offset.h  anim_sample.cpp  anim_sample.h  animation.cpp  animation.h  blendspace_1d.cpp  blendspace_1d.h  blendspace_2d.cpp  blendspace_2d.h  main.cpp  skeletal_mesh.cpp  skeletal_mesh.h  skeleton.cpp  skeleton.h
src/shader/: bone_fs.glsl  bone_vs.glsl  skinning_fs.glsl  skinning_vs.glsl  vs.glsl
